25.4.8 (ws)
      - implement Drag&Drop of measures with tuplets
      - remember last "save as" directory
      - lyrics edit mode: if at last column <cursor right> moves to
        next note (syllable)
      - lyrics edit mode: if at column zero <cursor left> moves to
        previous note (syllable)
      - shift+space now position to previous note (syllable) in lyrics
        edit mode
      - fix layout: left margin in measure was too small if first note had
        accidentals (accidentals moved into the margin)
24.4.8 (ws)
      - dont leave editmode when autosave a file
      - dont autosave new created files
      - extend the chord table with some new chords
      - new function: transpose chords
23.4.8 (ws)
      - on popular demand: configurable auto save function
      - layout all after loading style
      - fix special characters in text palette (no flat symbol)
      - fix accidentals #/b in instrument names
21.4.8 (ws)
      - new style option "create courtesy time signatures"
      - can read now MusicXml files with incomplete part-list
      - add style template "leadsheet.mss"
20.4.8 (ws)
      - fixes for harmony import/export
      - misc small fixes for MusicXml import/export
      - added xml testfiles from Reinhold Kainhofer (Lilypond project);
        build script to render each xml testfile with mscore and lilypond
        and create html files to easy compare both renderings
18.4.8 (ws)
      - incremental layout for note entry and note pitch changes
      - fix for MusicXml import of some chords
17.4.8 (ws)
      - fix tuplet rendering
      - fix music xml import of chordnames (root a/b not recognized)
13.4.8 (ws)
      - reduce number of relayouts to speed up gui
      - speedup text entry
12.4.8 (ws)
      ======== Version 0.9.2 released =============
      - removed obsolete TeX manuals, replaced by open office version
        (german only)
      - fix layout position of small clefs