@@ -94,6 +94,7 @@ struct Preferences {
       int proximity;    // proximity for selecting elements on canvas
       bool autoSave;
       int autoSaveTime;
+      bool pngScreenShot;
 
       bool dirty;
 
